Operator and Hospital done

--- a/KwikMedical.HospitalView/KwikMedical.HospitalView.csproj
+++ b/KwikMedical.HospitalView/KwikMedical.HospitalView.csproj
@@ -55,17 +55,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
+    <Compile Include="HospitalWindow.xaml.cs">
+      <DependentUpon>HospitalWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UpdatePatientWindow.xaml.cs">
+      <DependentUpon>UpdatePatientWindow.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -93,6 +91,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="HospitalWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UpdatePatientWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KwikMedicalSystem.Business\KwikMedicalSystem.Business.csproj">
+      <Project>{f9b649e0-343a-4ae5-a7af-96d8d427f52b}</Project>
+      <Name>KwikMedicalSystem.Business</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
